--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ng-infinite-scroll": "^1.3.0"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "enzyme": "~2.9.1",
     "istanbul-instrumenter-loader": "0.2.0",
     "jasmine": "2.8.0",
