--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "git+https://github.com/superdesk/superdesk-publisher.git"
   },
   "dependencies": {
-    "angular-drag-and-drop-lists": "^2.1.0",
+    "angular-drag-and-drop-lists-spiria": "latest",
     "axios": "^0.18.0",
     "ng-file-upload": "^12.2.13",
     "ng-infinite-scroll": "^1.3.0"
