--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "angular-drag-and-drop-lists-spiria": "latest",
+    "angular-in-viewport": "^1.2.0",
     "axios": "^0.18.0",
     "ng-file-upload": "^12.2.13",
     "ng-infinite-scroll": "^1.3.0"
@@ -20,9 +21,9 @@
     "istanbul-instrumenter-loader": "0.2.0",
     "jasmine": "2.8.0",
     "karma": "1.7.1",
-    "karma-cli": "^1.0.1",
     "karma-chrome-launcher": "2.2.0",
-    "karma-coverage": "1.1.1",
+    "karma-cli": "^1.0.1",
+    "karma-coverage": "^1.1.2",
     "karma-jasmine": "1.1.0",
     "karma-junit-reporter": "^1.1.0",
     "karma-sourcemap-loader": "~0.3.7",
