--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "license": "AGPL-3.0",
   "description": "Superdesk Publisher component",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/superdesk/superdesk-publisher.git"
@@ -17,6 +20,9 @@
     "ng-infinite-scroll": "^1.3.0"
   },
   "devDependencies": {
+    "jest": "^24.8.0",
+    "jest-dom": "^3.4.0",
+    "react-testing-library": "^7.0.1",
     "superdesk-code-style": "^1.0.0",
     "superdesk-core": "superdesk/superdesk-client-core#f4cf590"
   }
