--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "jest-dom": "^3.4.0",
     "jest-transform-css": "^2.0.0",
     "superdesk-code-style": "^1.0.0",
-    "superdesk-core": "superdesk/superdesk-client-core#0579575"
+    "superdesk-core": "superdesk/superdesk-client-core#0579575",
+    "wait-for-expect": "^1.2.0"
   }
 }
