--- a/package.json
+++ b/package.json
@@ -42,9 +42,7 @@
     "react-awesome-slider": "^1.0.1",
     "react-beautiful-dnd": "^11.0.5",
     "react-select": "^3.0.4",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.3",
-    "react-window-infinite-loader": "^1.0.3"
+    "react-virtualized": "^9.21.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
