--- a/package.json
+++ b/package.json
@@ -39,12 +39,10 @@
     "moment": "^2.24.0",
     "ng-file-upload": "^12.2.13",
     "ng-infinite-scroll": "^1.3.0",
-    "react-awesome-slider": "^1.0.1",
+    "react-awesome-slider": "^2.2.1",
     "react-beautiful-dnd": "^11.0.5",
     "react-select": "^3.0.4",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.8.5",
-    "react-window-infinite-loader": "^1.0.5"
+    "react-virtualized": "^9.21.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
