--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:debug": "jest --debug",
-    "test:updateSnapshot": "jest --updateSnapshot"
+    "test:updateSnapshot": "jest --updateSnapshot",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
