--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.24.0",
     "ng-file-upload": "^12.2.13",
     "ng-infinite-scroll": "^1.3.0",
+    "owl.carousel": "^2.3.4",
     "react-awesome-slider": "^1.2.0",
     "react-beautiful-dnd": "^11.0.5",
     "react-select": "^3.0.4",
@@ -61,6 +62,8 @@
     "jest": "^24.8.0",
     "jest-dom": "^3.4.0",
     "jest-transform-css": "^2.0.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "superdesk-code-style": "^1.0.0",
     "superdesk-core": "superdesk/superdesk-client-core#2d4ce24",
     "wait-for-expect": "^1.2.0"
