--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ng-file-upload": "^12.2.13",
     "ng-infinite-scroll": "^1.3.0",
     "react-beautiful-dnd": "^11.0.5",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-select": "^3.0.4",
     "react-virtualized": "^9.21.2"
   },
