--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-infinite-scroll-component": "^5.0.4",
     "react-select": "^3.0.4",
-    "react-virtualized": "^9.21.2"
+    "react-virtualized": "^9.21.2",
+    "superdesk-ui-framework": "2.2.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
