--- a/client/publisher-extension/package.json
+++ b/client/publisher-extension/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "superdesk-code-style": "1.3.0",
     "typescript": "4.0.3"
+  },
+  "superdeskExtension": {
+    "translations-directory": "./translations"
   }
 }
