move extension out of client dir in order to be able to exclude node_modules for translation extraction

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "index.js"
     ],
     "include": [
-        "client"
+        "client",
+        "publisher-extension",
     ],
     "compilerOptions": {
         "baseUrl": "client",
