--- a/publisher-extension/package.json
+++ b/publisher-extension/package.json
@@ -11,6 +11,10 @@
     "typescript": "4.0.3"
   },
   "superdeskExtension": {
-    "translations-directory": "./translations"
+    "translations-directory": "./translations",
+    "translations-extract-paths": [
+      "./src",
+      "../client"
+    ]
   }
 }
